Initial implementation of in memory store, create game, get game/player state and get score APIs
